--- a/ngEventTracker/src/app/components/home/home.component.css
+++ b/ngEventTracker/src/app/components/home/home.component.css
@@ -23,6 +23,8 @@
   padding-top: 3%;
   padding-bottom: 3%;
   margin: auto;
+  margin-left: 20%;
+  margin-top: 3%;
   width: 60%;
   box-shadow: 0 0 20px rgba(5, 37, 30, 0.2);
   border-radius: 20px;
