--- a/ngEventTracker/src/styles.css
+++ b/ngEventTracker/src/styles.css
@@ -6,4 +6,5 @@ body {
   height: 100vh;
   overscroll-behavior-y: none;
   overscroll-behavior-x: none;
+  position: relative;
 }
